<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.chatchat</groupId>
    <artifactId>langchain4j-chatchat</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>LangChain4j ChatChat - Enterprise AI Application</name>
    <description>Enterprise-grade document search and Agent application based on LangChain4j</description>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.5.3</spring-boot.version>
        <langchain4j.version>1.18.0</langchain4j.version>
        <mcp-sdk.version>2.0.1</mcp-sdk.version>
        <grpc.version>1.83.1</grpc.version>
        <protobuf.version>4.36.0</protobuf.version>
        <opensearch.client.version>2.12.0</opensearch.client.version>
        <webmagic.version>1.0.3</webmagic.version>
        <rocksdb.version>10.10.1.1</rocksdb.version>
        <lombok.version>1.18.32</lombok.version>
        <chatchat.main-class>com.chatchat.api.ChatChatApplication</chatchat.main-class>
    </properties>

    <modules>
        <module>chatchat-common</module>
        <module>chatchat-mcp-grpc</module>
        <module>chatchat-license</module>
        <module>chatchat-agents</module>
        <module>chatchat-tools</module>
        <module>chatchat-runtime-mcp</module>
        <module>chatchat-runtime-news</module>
        <module>chatchat-runtime-market</module>
        <module>chatchat-knowledge-base</module>
        <module>chatchat-chat</module>
        <module>chatchat-enterprise</module>
        <module>chatchat-api</module>
        <module>chatchat-mcp-server</module>
        <module>chatchat-integration</module>
        <module>chatchat-e2e-tests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- LangChain4j BOM -->
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Model Context Protocol Java SDK BOM -->
            <dependency>
                <groupId>io.modelcontextprotocol.sdk</groupId>
                <artifactId>mcp-bom</artifactId>
                <version>${mcp-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-mcp-grpc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-license</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-agents</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-tools</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-runtime-mcp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-runtime-news</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-runtime-market</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-knowledge-base</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-chat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-integration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.chatchat</groupId>
                <artifactId>chatchat-enterprise</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Shared compile-time annotations -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals><goal>prepare-agent</goal></goals>
                        <configuration>
                            <excludes>
                                <!-- JSqlParser's generated token manager exceeds the JVM method-size
                                     limit after instrumentation; it is third-party code, not project coverage. -->
                                <exclude>net.sf.jsqlparser.parser.*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>verify</phase>
                        <goals><goal>report</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <mainClass>${chatchat.main-class}</mainClass>
                        <layers>
                            <enabled>true</enabled>
                        </layers>
                    </configuration>
                    <executions>
                        <execution>
                            <id>repackage</id>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
